quick jisho fix
- fixed quick jisho overflowing window borders when font size is changed.

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -2707,6 +2707,8 @@ input:checked + .genki_pseudo_checkbox:after { font-size:14px; }
   box-shadow:0px 0px 6px rgba(0, 0, 0, 0.25);
   height:300px;
   width:500px;
+  max-height:85%;
+  max-width:90%;
   position:fixed;
   right:5px;
   bottom:40px;
